--- a/templates/layout/partials/navbar/navbar.html
+++ b/templates/layout/partials/navbar/navbar.html
@@ -13,19 +13,19 @@
   <div class="navbar-nav-right d-flex align-items-center" id="navbar-collapse">
 
     <!-- Search -->
-    <div class="navbar-nav align-items-center">
+    <!-- <div class="navbar-nav align-items-center">
       <div class="nav-item d-flex align-items-center">
         <i class="bx bx-search bx-md"></i>
         <input type="text" class="form-control border-0 shadow-none ps-1 ps-sm-2" placeholder="Search..." aria-label="Search...">
       </div>
-    </div>
+    </div>  -->
     <!-- /Search -->
 
     <ul class="navbar-nav flex-row align-items-center ms-auto">
       <!-- Place this tag where you want the button to render. -->
-      <li class="nav-item lh-1 me-4">
+     <!-- <li class="nav-item lh-1 me-4">
         <a class="github-button" href="{% get_theme_variables 'git_repository' %}" data-icon="octicon-star" data-size="large" data-show-count="true" aria-label="Star themeselection/sneat-html-admin-template-free on GitHub">Star</a>
-      </li>
+      </li> -->
 
       <!-- User -->
       <li class="nav-item navbar-dropdown dropdown-user dropdown">
@@ -63,19 +63,19 @@
               <i class="bx bx-cog bx-md me-3"></i><span>Settings</span>
             </a>
           </li>
-          <li>
+           <!--<li>
             <a class="dropdown-item" href="javascript:void(0);">
               <span class="d-flex align-items-center align-middle">
-                <i class="flex-shrink-0 bx bx-credit-card bx-md me-3"></i><span class="flex-grow-1 align-middle">Billing Plan</span>
-                <span class="flex-shrink-0 badge rounded-pill bg-danger">4</span>
+               <i class="flex-shrink-0 bx bx-credit-card bx-md me-3"></i><span class="flex-grow-1 align-middle">Billing Plan</span>
+                <span class="flex-shrink-0 badge rounded-pill bg-danger">4</span> 
               </span>
             </a>
-          </li>
+          </li>-->
           <li>
             <div class="dropdown-divider my-1"></div>
           </li>
           <li>
-            <a class="dropdown-item" href="javascript:void(0);">
+            <a class="dropdown-item" href="{% url "auth_logout_basic" %}">
               <i class="bx bx-power-off bx-md me-3"></i><span>Log Out</span>
             </a>
           </li>
