--- a/templates/layout/partials/navbar/navbar.html
+++ b/templates/layout/partials/navbar/navbar.html
@@ -31,7 +31,7 @@
       <li class="nav-item navbar-dropdown dropdown-user dropdown">
         <a class="nav-link dropdown-toggle hide-arrow p-0" href="javascript:void(0);" data-bs-toggle="dropdown">
           <div class="avatar avatar-online">
-            <img src="{% static 'img/avatars/1.png' %}" alt class="w-px-40 h-auto rounded-circle">
+            <img src="{% static 'img/avatars/userdefault.png' %}" alt class="w-px-40 h-auto rounded-circle">
           </div>
         </a>
         <ul class="dropdown-menu dropdown-menu-end">
@@ -40,12 +40,12 @@
               <div class="d-flex">
                 <div class="flex-shrink-0 me-3">
                   <div class="avatar avatar-online">
-                    <img src="{% static 'img/avatars/1.png' %}" alt class="w-px-40 h-auto rounded-circle">
+                    <img src="{% static 'img/avatars/userdefault.png' %}" alt class="w-px-40 h-auto rounded-circle">
                   </div>
                 </div>
                 <div class="flex-grow-1">
-                  <h6 class="mb-0">John Doe</h6>
-                  <small class="text-muted">Admin</small>
+                  <h6 class="mb-0">{{ request.user.get_full_name  }}</h6>
+                  <small class="text-muted">{{ request.user.roles.role.name }}</small>
                 </div>
               </div>
             </a>
@@ -53,11 +53,11 @@
           <li>
             <div class="dropdown-divider my-1"></div>
           </li>
-          <li>
+          {% comment %} <li>
             <a class="dropdown-item" href="javascript:void(0);">
              <i class="bx bx-user bx-md me-3"></i><span>My Profile</span>
             </a>
-          </li>
+          </li> {% endcomment %}
           <li>
             <a class="dropdown-item" href="javascript:void(0);">
               <i class="bx bx-cog bx-md me-3"></i><span>Settings</span>
