--- a/apps/authentication/templates/auth_login_basic.html
+++ b/apps/authentication/templates/auth_login_basic.html
@@ -31,7 +31,7 @@
           <form id="formAuthentication" class="mb-6" method="POST">
             {% csrf_token %}
             <div class="mb-6">
-              <label for="email" class="form-label">Email or Username</label>
+              <label for="email" class="form-label">Username</label>
               <input type="text" class="form-control" id="email" name="email-username" placeholder="Enter your email or username" autofocus>
             </div>
             <div class="mb-6 form-password-toggle">
@@ -41,7 +41,8 @@
                 <span class="input-group-text cursor-pointer"><i class="bx bx-hide"></i></span>
               </div>
             </div>
-            <div class="mb-8">
+
+            {% comment %} <div class="mb-8">
               <div class="d-flex justify-content-between mt-8">
                 <div class="form-check mb-0 ms-2">
                   <input class="form-check-input" type="checkbox" id="remember-me">
@@ -53,7 +54,8 @@
                   <span>Forgot Password?</span>
                 </a>
               </div>
-            </div>
+            </div> {% endcomment %}
+
             <div class="mb-6">
               <button class="btn btn-primary d-grid w-100" type="submit">Login</button>
             </div>
