--- a/templates/layout/partials/navbar/navbar.html
+++ b/templates/layout/partials/navbar/navbar.html
@@ -58,11 +58,11 @@
              <i class="bx bx-user bx-md me-3"></i><span>My Profile</span>
             </a>
           </li> {% endcomment %}
-          <li>
+          {% comment %} <li>
             <a class="dropdown-item" href="javascript:void(0);">
               <i class="bx bx-cog bx-md me-3"></i><span>Settings</span>
             </a>
-          </li>
+          </li> {% endcomment %}
            <!--<li>
             <a class="dropdown-item" href="javascript:void(0);">
               <span class="d-flex align-items-center align-middle">
