--- a/templates/layout/partials/styles.html
+++ b/templates/layout/partials/styles.html
@@ -6,7 +6,8 @@
 <link href="https://fonts.googleapis.com/css2?family=Public+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
 
 <!-- Icons -->
-<link rel="stylesheet" href="{% static 'vendor/fonts/boxicons.css' %}" />
+{% comment %} <link rel="stylesheet" href="{% static 'vendor/fonts/boxicons.css' %}" /> {% endcomment %}
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/boxicons/2.1.0/css/boxicons.min.css" integrity="sha512-pVCM5+SN2+qwj36KonHToF2p1oIvoU3bsqxphdOIWMYmgr4ZqD3t5DjKvvetKhXGc/ZG5REYTT6ltKfExEei/Q==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
 <!--Core CSS -->
 <link rel="stylesheet" href="{% static 'vendor/css/core.css' %}" />
